--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="team-img">
 					<img src="images/blank-user.jpg" alt=""/>
 					<h3>NAND LAL MATHUR</h3>
-					<h4>Vice Presidebt</h4>
+					<h4>Vice President</h4>
 					<!--<p>Nam libero tempore, cum soluta nobis
 					est eligendi optio cumque nihil impedit
 					quo minus</p>
@@ -326,7 +326,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="view view-seventh">
 				<a href="images/g4.jpg" class="b-link-stripe b-animate-go  swipebox"  title="Image Title"><img src="images/g4.jpg" alt="">
 				<div class="mask">
-					 <h4>T.D.MEMORIAL COLLEGE</h4>
+					 <h4>VIDYAANJALI INSTITUTE FOR PERFROMING ARTS</h4>
 					<p></p>
 
 				</div></a>
