--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Tutelage Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -111,11 +109,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<input type="submit" value="SEND" >
 				</form>-->
 
-				<p>Thanks for showing your interest in T.D.Memorial. You can reach out to us through email or phone on the following numbers: </p>
+				<p>Thanks for showing your interest in T.D.Memorial Society. You can reach out to us through email or phone on the following numbers: </p>
 
 				<h3>Contact Address</h3>
 				<p>
-					T.D.Memorial <br>
+					T.D.Memorial Society,<br>
 					65-A, DDA MIG Flats, <br>
 					Qutub Enclave, <br>
 					Katwaria Sarai, <br>
